# yummy

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  install.ps1  install.sh
.github/workflows/: dev-release.yml  release.yml  update-dist.yml
docker/: Dockerfile  graal.Dockerfile
docs/i18n/zh-CN/: README.md
setup-ym/: action.yml
specs/: 01-config.md  02-resolver.md  03-package-management.md  04-compiler.md  05-runtime.md  06-testing.md  07-workspace.md  08-jdk.md  09-ide.md  10-publish.md  11-diagnostics.md  12-migration.md  13-scripts.md  14-cli.md  README.md
src/: jdk_manager.rs  jvm.rs  lib.rs  main.rs  resources.rs  scripts.rs
src/commands/: add.rs  audit.rs  bench.rs  build.rs  cache.rs  cache_clean.rs  check.rs  classpath.rs  clean.rs  config_cmd.rs  create.rs  dedupe.rs  deps.rs  dev.rs  diff.rs  doc.rs  doctor.rs  env.rs  exec.rs  fmt.rs  graph.rs  hash.rs  idea.rs  info.rs  init.rs  install.rs  jar.rs  license.rs  link.rs  lock.rs  login.rs  migrate.rs  mod.rs  native_cmd.rs  outdated.rs  pin.rs  prepare.rs  publish.rs  rebuild.rs  remove.rs  (+14 more)
src/compiler/: ecj_service.rs  incremental.rs  javac.rs  mod.rs  worker.rs
src/compiler/worker_src/: YmCompilerWorker.java
src/config/: mod.rs  schema.rs
src/hotreload/: mod.rs
src/watcher/: mod.rs
src/workspace/: cache.rs  graph.rs  lockfile_diff.rs  mod.rs  resolver.rs
ym-agent/src/main/java/dev/yummy/agent/: YummyClassLoader.java  YummyDevAgent.java
ym-ecj-service/src/main/java/dev/yummy/ecj/: EcjCompileService.java  SimpleJson.java
