[package]
name = "ym"
version = "0.1.0"
edition = "2024"
description = "Yummy - A modern Java build tool"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "socks"] }
roxmltree = "0.20"
notify = "7"
petgraph = { version = "0.6", features = ["serde-1"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
sha2 = "0.10"
glob = "0.3"
ctrlc = "3"
rayon = "1"
clap_complete = "4"

[profile.release]
opt-level = 3
lto = true
strip = true
