[package]
name = "ym"
version = "0.2.2"
edition = "2024"
description = "Yummy - A modern Java build tool"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
bincode = "1"
anyhow = "1"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "socks", "rustls-tls"] }
roxmltree = "0.20"
notify = "7"
petgraph = { version = "0.6", features = ["serde-1"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
sha2 = "0.10"
glob = "0.3"
ctrlc = "3"
rayon = "1"
clap_complete = "4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
md5 = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true
