[package]
name = "ym"
version = "0.3.23"
edition = "2024"
rust-version = "1.85"
description = "Yummy - A modern Java build tool"
license = "MIT"
repository = "https://github.com/ympkg/yummy"
homepage = "https://github.com/ympkg/yummy"
readme = "README.md"
keywords = ["java", "build-tool", "package-manager", "gradle", "maven"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = [".github/", ".claude/", "CLAUDE.md", "install.sh", "install.ps1"]

[[bin]]
name = "ym"
path = "src/main.rs"

[[bin]]
name = "ymc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "socks", "rustls-tls"] }
roxmltree = "0.20"
notify = "7"
petgraph = { version = "0.6", features = ["serde-1"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
sha2 = "0.10"
glob = "0.3"
ctrlc = "3"
libc = "0.2"
rayon = "1"
clap_complete = "4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
md5 = "0.7"
regex = "1"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
strip = true
